# raytrace-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: camera.rs  color.rs  hit.rs  interval.rs  lib.rs  main.rs  ray.rs  render.rs  vec3.rs  writer.rs
src/material/: materials.rs
src/model/: mod.rs  rectangle.rs  sphere.rs  triangle.rs
