[package]
name = "ray_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "output_example"
path = "src/bin/output_example.rs"

[[bin]]
name = "special_case_1"
path = "src/bin/special_case1.rs"

[[bin]]
name = "special_case_2"
path = "src/bin/special_case2.rs"

[[bin]]
name = "random_scene_sphere"
path = "src/bin/random_scene_sphere.rs"

[dependencies]
image = "0.24.7"
rand = "0.8.5"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}